welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:11: error: not found: type color
def faireV(c:color)  {
             ^MethodsPicture:25: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
  var c : Color ;
      ^MethodsPicture:25: error: local variables must be initialized
  var c : Color ;
      ^